# AutoWebArchiver

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: archive.yml  ci.yml
config/: sources.yaml
docs/: index.html  spn2-api-reference.md
src/autoarchiver/: logging_setup.py
src/autoarchiver/discovery/: models.py  sitemap.py
src/autoarchiver/spn2/: client.py
src/autoarchiver/state/: store.py
src/autowebarchiver/: config.py  logging_setup.py  main.py  scheduling.py
src/autowebarchiver/discovery/: models.py  rss.py  sitemap.py
src/autowebarchiver/spn2/: client.py  models.py
src/autowebarchiver/state/: dropped_urls.py  feed_stats.py  run_history.py  store.py
state/: dropped_urls.json  feed_stats.json  run_history.json  seen.json
tests/: test_config.py  test_dropped_urls.py  test_feed_stats.py  test_main.py  test_rss.py  test_run_history.py  test_sitemap.py  test_spn2_client.py  test_state_store.py
tests/fixtures/: sample_malformed_rss.xml  sample_rss.xml  sample_sitemap.xml  sample_sitemap_index.xml
