[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autowebarchiver"
version = "0.1.0"
description = "Archivage automatique de pages web sur l'Internet Archive via SPN2"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# No stub package exists on PyPI for feedparser.
module = "feedparser"
ignore_missing_imports = true

[tool.coverage.run]
source = ["autowebarchiver"]
